Added steps to the recipes

--- a/recipes/sweet-potato.html
+++ b/recipes/sweet-potato.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweet Potato</title>
+    <title>Roasted Sweet Potato and Kale Salad</title>
 </head>
 <body>
-    <h1>Sweet Potato</h1>
+    <h1>Roasted Sweet Potato and Kale Salad</h1>
 
     <img src="https://www.allrecipes.com/thmb/3KR37PUF0CEUpOLRYVvoTijo59g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/6737836-roasted-kale-and-sweet-potato-salad-VAT-Beauty-4x3-1f9a43ad4d204a26858ddb20621a0d25.jpg" alt="Sweet Potato" />
     <h2>Description</h2>
     <p>This kale sweet potato salad has a bright contrast in flavors which makes it a favorite among friends and family. The natural sweetness of the sweet potatoes pairs nicely with the caramelized onions and kale.</p>
 
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>2 sweet potatoes or jewel yams, cut into 1-inch cubes</li>
         <li>2 tablespoons olive oil</li>
@@ -24,6 +24,16 @@
         <li>2 tablespoons red wine vinegar</li>
         <li>1 teaspoon chopped fresh thyme</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat the oven to 400 degrees F (200 degrees C). Toss sweet potato cubes with 2 tablespoons of olive oil in a bowl. Season to taste with salt and pepper; arrange evenly onto a baking sheet. </li>
+        <li>Bake in the preheated oven until the yams are tender, 20 to 25 minutes. Cool to room temperature in the refrigerator. </li>
+        <li>Meanwhile, heat remaining 1 tablespoon of olive oil in a large skillet over medium heat. Add onion and garlic; cook and stir until onion has caramelized to a golden brown, about 15 minutes. </li>
+        <li>Stir in kale, cooking until wilted and tender. Transfer kale mixture to a bowl; cool to room temperature in the refrigerator. </li>
+        <li>Once all the ingredients have cooled, combine yams, kale, red wine vinegar, and fresh thyme in a bowl. Season to taste with salt and pepper, and gently stir to combine. </li>
+        <li>Serve and enjoy.</li>
+    </ol>
 
     <a href="../index.html">Home</a>
 </body>
