--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -13,7 +13,7 @@
     <h2>Description</h2>
     <p>These Swedish meatballs are a Christmas tradition in our family. We frequently double the recipe and keep it warm in a slow cooker. Worth the effort, and the meatballs are even better the next day! Reserve brown gravy and add sour cream to it the day you serve the leftovers.</p>
     
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>2 slices day-old white bread, crumbled</li>
         <li>½ cup heavy cream</li>
@@ -34,7 +34,22 @@
         <li>2 cups beef broth, or as needed</li>
         <li>½ (8 ounce) container sour cream</li>
     </ul>
-    
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). </li>
+        <li>Place bread crumbs into a small bowl; mix in cream. Allow to stand until crumbs absorb cream, about 10 minutes. </li>
+        <li>Meanwhile, melt 1 teaspoon butter in a skillet over medium heat; cook and stir onion until light brown, about 10 minutes. Transfer onion to a mixing bowl. </li>
+        <li>Mix ground beef, ground pork, egg, brown sugar, salt, black pepper, nutmeg, allspice, and ginger with onion in the mixing bowl. Lightly mix in bread crumbs and cream. </li>
+        <li>Melt 1 tablespoon butter in a large skillet over medium heat. Pinch off about 1 ½ tablespoons meat mixture per meatball; form into balls. Place meatballs into the skillet and cook, turning often, until browned, about 5 minutes. Insides of meatballs will still be pink. </li>
+        <li>Place browned meatballs into a baking dish, pour in chicken broth, and cover with foil.</li>
+        <li>Bake in the preheated oven until meatballs are tender, about 40 minutes. Remove meatballs to a serving dish. </li>
+        <li>Pour pan drippings into a saucepan over medium heat. Whisk flour into drippings until smooth. </li>
+        <li>Gradually whisk in enough beef broth to total about 2 ½ cups liquid. </li>
+        <li>Bring gravy to a simmer, whisking constantly, until thickened, about 5 minutes. </li>
+        <li>Just before serving, whisk in sour cream. Season with salt and black pepper. Serve gravy with meatballs. </li>
+    </ol>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
