Images added to the project. Adjusted recipes names

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Homemade Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="https://www.allrecipes.com/thmb/1d5I2gWVzYX494dIujEQSfRzeNk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/19344_homemade-lasagna_Rita2-1x1-1-b4f53c3ba2f4475c97665908a6fd1783.jpg" alt="Lasagna Image" />
+    <h1>Homemade Lasagna</h1>
+    <img src="../images/homemade-lasagna.jpg" alt="Lasagna Image" />
 
     <h2>Description</h2>
     <p>A classic Italian dish made with layers of pasta, meat sauce, and cheese.</p>
