--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Swedish Meatballs</h1>
 
-    <img src="https://www.allrecipes.com/thmb/u-o9bj7_uXNj0TkkSEevO88LZvs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/216564-swedish-meatballs-svenska-kottbullar-DDMFS-4x3-2cfaeac162c9485dbd7d632fd0b6ef0a.jpg" alt="Swedish Meatballs" />
+    <img src="../images/swedish-meatballs.jpg" alt="Swedish Meatballs" />
 
     <h2>Description</h2>
     <p>These Swedish meatballs are a Christmas tradition in our family. We frequently double the recipe and keep it warm in a slow cooker. Worth the effort, and the meatballs are even better the next day! Reserve brown gravy and add sour cream to it the day you serve the leftovers.</p>
