--- a/recipes/sweet-potato.html
+++ b/recipes/sweet-potato.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Roasted Sweet Potato and Kale Salad</h1>
 
-    <img src="https://www.allrecipes.com/thmb/3KR37PUF0CEUpOLRYVvoTijo59g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/6737836-roasted-kale-and-sweet-potato-salad-VAT-Beauty-4x3-1f9a43ad4d204a26858ddb20621a0d25.jpg" alt="Sweet Potato" />
+    <img src="../images/roasted-kale-and-sweet-potato.jpg" alt="Sweet Potato" />
     <h2>Description</h2>
     <p>This kale sweet potato salad has a bright contrast in flavors which makes it a favorite among friends and family. The natural sweetness of the sweet potatoes pairs nicely with the caramelized onions and kale.</p>
 
