--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <ul>
         <li><a href="recipes/meatballs.html">Swedish Meatballs</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/sweet-potato.html">Sweet Potato</a></li>
+        <li><a href="recipes/lasagna.html">Homemade Lasagna</a></li>
+        <li><a href="recipes/sweet-potato.html">Roasted Sweet Potato and Kale Salad</a></li>
     </ul>
 </body>
 </html>
